--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
       - assets/images/image_empty_article.svg
       - assets/images/icon_favorite.svg
       - assets/images/icon_not_favorite.svg
+      - assets/images/icon_arrow.svg
 
   fonts:
       - family: Pretendard
